--- a/app/Presenters/templates/UserProfile/user.latte
+++ b/app/Presenters/templates/UserProfile/user.latte
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6"><h1>Moje články</h1></div>
-        <div class="col-6"><h1><a n:href="UserProfile:deny">Zamítnuté články</a></h1></div>
+        <div class="col-6"><h1><a n:href="DenyArticles:deny">Zamítnuté články</a></h1></div>
     </div>
     <div>
         <img class="img-fluid" src="{$basePath}/img/uvod1.jpg">
