Blog bez popisku

--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="{$basePath}/bootstrap/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="{$basePath}/css/my_css_style.css">
+	<link rel="stylesheet" href="{$basePath}/css/style.css">
 	{block headBlock}{/block}
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
 </head>
