--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,3 +44,11 @@
 .newComments{
     margin-top: 50px;
 }
+{-ms-flex:0 0 25%;flex:0 0 25%;max-width:25%}
+@media (min-width:768px){.col-md{
+    -ms-flex-preferred-size:0;
+    flex-basis:0;
+    -ms-flex-positive:1;
+    flex-grow:1;
+    max-width:100%}
+}
